# Delta-Blockchain

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE.md  README.md  circle.yml  delta_config.ini
ciscripts/: buildfailure.sh  buildpending.sh  buildscript.sh  buildsuccess.sh  buildtests.sh
contrib/: paas-sv-run.sh  pulltestnetscripts.sh  startpaastiuud.sh  sync-sv-run.sh  tiuud.run  tiuudentrypoint.sh
doc/: Troubleshoot.md  building.md  example_config.ini  exchangequickstart.md  git-guidelines.md  quickstart.md  seednodes.txt  witness_parameters.md
doc/devs/: 2018-08-20-resource-notes.md  api-notes.md  create-operation.md  debug_node_plugin.md  plugin.md  sqrt.md  testing.md
example_plugins/example_api_plugin/: CMakeLists.txt  example_api_plugin.cpp
libraries/appbase/: application.cpp
libraries/chain/: CMakeLists.txt  block_log.cpp  database.cpp  delta_evaluator.cpp  delta_objects.cpp  fork_database.cpp  generic_custom_operation_interpreter.cpp  shared_authority.cpp  smt_evaluator.cpp  transaction_object.cpp  witness_schedule.cpp
libraries/chain/include/delta/chain/: account_object.hpp  block_log.hpp  block_summary_object.hpp  buffer_type.hpp  comment_object.hpp  compound.hpp  custom_operation_interpreter.hpp  database.hpp  database_exceptions.hpp  db_with.hpp  delta_evaluator.hpp  delta_object_types.hpp  delta_objects.hpp  evaluator.hpp  evaluator_registry.hpp  fork_database.hpp  generic_custom_operation_interpreter.hpp  global_property_object.hpp  hardfork_property_object.hpp  history_object.hpp  index.hpp  node_property_object.hpp  notifications.hpp  pending_optional_action_object.hpp  pending_required_action_object.hpp  schema_types.hpp  shared_authority.hpp  shared_db_merkle.hpp  smt_objects.hpp  transaction_notification.hpp  transaction_object.hpp  witness_objects.hpp  witness_schedule.hpp
libraries/chain/include/delta/chain/schema_types/: oid.hpp
libraries/chain/include/delta/chain/smt_objects/: account_balance_object.hpp  smt_market_maker.hpp  smt_token_object.hpp
libraries/chain/include/delta/chain/util/: advanced_benchmark_dumper.hpp  asset.hpp  impacted.hpp  manabar.hpp  rd_dynamics.hpp  rd_setup.hpp  reward.hpp  signal.hpp  uint256.hpp
libraries/chain/smt_objects/: smt_market_maker.cpp
libraries/chain/util/: advanced_benchmark_dumper.cpp  impacted.cpp  rd.cpp  reward.cpp
libraries/jsonball/: CMakeLists.txt
libraries/legacy_plugins/account_statistics/: CMakeLists.txt  account_statistics_api.cpp  account_statistics_plugin.cpp  plugin.json
libraries/legacy_plugins/account_statistics/include/delta/account_statistics/: account_statistics_api.hpp  account_statistics_plugin.hpp
libraries/legacy_plugins/auth_util/: CMakeLists.txt  auth_util_api.cpp  auth_util_plugin.cpp  plugin.json
libraries/legacy_plugins/auth_util/include/delta/plugins/auth_util/: auth_util_api.hpp  auth_util_plugin.hpp
libraries/legacy_plugins/block_info/: CMakeLists.txt  block_info_api.cpp  block_info_plugin.cpp  plugin.json
libraries/legacy_plugins/block_info/include/delta/plugins/block_info/: block_info.hpp  block_info_api.hpp  block_info_plugin.hpp
libraries/legacy_plugins/blockchain_statistics/: CMakeLists.txt  blockchain_statistics_api.cpp  blockchain_statistics_plugin.cpp  plugin.json
libraries/legacy_plugins/blockchain_statistics/include/delta/blockchain_statistics/: blockchain_statistics_api.hpp  blockchain_statistics_plugin.hpp
libraries/legacy_plugins/delayed_node/: CMakeLists.txt  delayed_node_plugin.cpp  plugin.json
libraries/legacy_plugins/delayed_node/include/delta/delayed_node/: delayed_node_plugin.hpp
libraries/legacy_plugins/private_message/: CMakeLists.txt  plugin.json  private_message_plugin.cpp
libraries/legacy_plugins/private_message/include/delta/private_message/: private_message_evaluators.hpp  private_message_operations.hpp  private_message_plugin.hpp
libraries/legacy_plugins/raw_block/: CMakeLists.txt  plugin.json  raw_block_api.cpp  raw_block_plugin.cpp
libraries/legacy_plugins/raw_block/include/delta/plugins/raw_block/: raw_block_api.hpp  raw_block_plugin.hpp
libraries/manifest/: CMakeLists.txt
libraries/net/: CMakeLists.txt  node.cpp  peer_connection.cpp
libraries/protocol/: CMakeLists.txt  asset.cpp  authority.cpp  block.cpp  delta_operations.cpp  get_config.cpp  operations.cpp  schema_types.cpp  sign_state.cpp  smt_operations.cpp  transaction.cpp  types.cpp  version.cpp
libraries/schema/: CMakeLists.txt  schema.cpp
libraries/schema/include/delta/schema/: abstract_schema.hpp  schema.hpp  schema_impl.hpp  schema_types.hpp
libraries/schema/include/delta/schema/schema_types/: flat_map.hpp  flat_set.hpp  pair.hpp  static_variant.hpp  vector.hpp
libraries/utilities/: CMakeLists.txt  benchmark_dumper.cpp  git_revision.cpp.in  key_conversion.cpp  logging_config.cpp  string_escape.cpp  tempdir.cpp  words.cpp
libraries/utilities/include/delta/utilities/: benchmark_dumper.hpp  git_revision.hpp  key_conversion.hpp  logging_config.hpp  padding_ostream.hpp  plugin_utilities.hpp  string_escape.hpp  tempdir.hpp  words.hpp
libraries/wallet/: CMakeLists.txt  Doxyfile.in  api_documentation_standin.cpp  generate_api_documentation.pl  remote_node_api.cpp  wallet.cpp
programs/: CMakeLists.txt
programs/build_helpers/: configure_build.py  get_config_check.sh
programs/cli_wallet/: CMakeLists.txt  main.cpp
programs/deltad/: CMakeLists.txt  main.cpp
programs/js_operation_serializer/: CMakeLists.txt  main.cpp
programs/size_checker/: CMakeLists.txt  main.cpp
programs/util/: CMakeLists.txt  dump_tiuu_schema.cpp  get_dev_key.cpp  inflation_model.cpp  inflation_plot.py  newplugin.py  object_size.py  schema_test.cpp  serialize_set_properties.cpp  sign_digest.cpp  sign_transaction.cpp  test_block_log.cpp  test_fixed_string.cpp  test_shared_mem.cpp
python_scripts/: setup.py
python_scripts/deltadebugnode/: __init__.py  debugnode.py  private_testnet.py
python_scripts/tests/: debug_hardforks.py  test_payouts.py
tests/: CMakeLists.txt  README.md
tests/api_tests/: jsonsocket.py  list_account.py  (+5 more)
(+279 files in other folders)
